# crazytrip_crazydex_capture

./: .gitignore  Cargo.toml  README.md
migrations/: 001_initial_schema.sql  002_add_difficulty_and_optimize_tags.sql  003_add_verified_field.sql  004_add_is_public_field.sql  V0001__create_schema.sql  V0002__add_tags_and_missing_columns.sql
src/: main.rs  webhooks.rs
src/ai/: mod.rs
src/config/: mod.rs
src/database/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/storage/: mod.rs
src/workers/: mod.rs
