[package]
name = "crazytrip-crazydex-capture"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.4"
actix-cors = "0.7.1"
actix-rt = "2.9"
actix-multipart = "0.7.2"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.20.0", features = ["derive"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }
dotenvy = "0.15"
futures-util = "0.3"

# Logging
env_logger = "0.11.8"
log = "0.4"
flexi_logger = "0.31.7"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Database
deadpool-postgres = "0.14.1"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }

# S3/AWS SDK
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.14", features = ["behavior-version-latest"] }
aws-credential-types = "1.1"

# HTTP client for AI service
reqwest = { version = "0.12.24", features = ["json", "multipart"] }

# Image processing
image = "0.25"

# Base64 encoding
base64 = "0.22"

# Hashing
sha2 = "0.10"

# Random
rand = "0.9.2"

# Observability
prometheus = "0.14"

glob = "0.3"

[dev-dependencies]
actix-web = { version = "4.4", features = ["macros"] }
